# python-practice

./: pyproject.toml  python-mysql.py
tests/: test_python_practice.py
