[tool.poetry]
name = "python-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
PyMySQL = "^0.9.3"
[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
